--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href="">Web Studio</a>
+        <a href="">Web Studio jhgdfghjkjhg</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
